--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,6 +11,7 @@ html {
 }
 body {
   margin: 0;
+	background-image = url(pictures/blue.jpg);
 }
 article,
 aside,
@@ -2557,7 +2558,7 @@ output {
   line-height: 1.42857143;
   color: #555;
   background-color: #fff;
-  background-image: none;
+  background-image: url(pictures/blue.jpg);
   border: 1px solid #ccc;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
